# llm-zoomcamp

./: .gitignore  pyproject.toml
01-agentic-rag/: faq.db  ingest.py  main.py  persinsent_rag.ipynb  rag_helper.py  sqlite-ingest.ipynb
02-vector-search/: dateOnnx.py  db.py  db_postgres.py  homework.py  main.py  ragPostgress.py  ragVector.py  rag_helper.py  step6-7.py  step8.py  step9.py
03-orchestration/: docker-compose.yml  run.sh
03-orchestration/flow/: 3_rag_with_websearch.yaml
04-evaluation/: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-evals.ipynb  04-llm-judge.ipynb  build_notebooks.py  evaluation_utils.py  homework.py  ingest.py  rag_helper.py
04-evaluation/data/: ground_truth.csv  rag-answers.csv  rag-evaluations.csv
05-monitoring/: Dockerfile  app.py  assistant.py  db_feedback.py  db_init.py  db_query.py  db_save.py  docker-compose.yml  evaluation_utils.py  generate_data.py  homework_solution.py  ingest.py  judge.py  metrics.py
